--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,11 @@
+// 변수 선언
+buildscript {
+    ext {
+        queryDslVersion = '5.0.0'
+    }
+}
+
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.0'
@@ -18,11 +26,60 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // 테스트 환경에서, 롬복 이용하기.
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
+    // 공통 레이아웃 기능 이용하기.
+    implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.1.0'
+
+    // 방법1
+//    implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '5.0.0'
+
+    // Querydsl 도구 설치
+    // 방법2
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+
+    // 모델 맵퍼 도구 설치.
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'
+
+    // 서버에서 유효성 체크 도구
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.3.0'
+
+    // Swagger UI, RESTful 테스트를 위한 화면 제공 툴.
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
+
+    annotationProcessor(
+            "jakarta.persistence:jakarta.persistence-api",
+            "jakarta.annotation:jakarta.annotation-api",
+            "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+// 프로젝트 빌드 폴더에 소스 파일 등을 자동으로 변경하는 코드.
+sourceSets {
+    main {
+        java {
+            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+        }
+    }
+}
+
+compileJava.dependsOn('clean')
+
