기본 파일 업로드

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=Cafe
+
+# ??? ?? ?? ??
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/webdb
+spring.datasource.username=webuser
+spring.datasource.password=webuser
+
+# log4j2 ?? ??
+logging.level.springframework=info
+logging.level.com.busanit501=debug
+
+# spring jpa ?? ??
+spring.jpa.hibernate.ddl-auto=update
+# 로그, 콘솔의 SQL을 좀 더 이쁘게 출력합니다.
+spring.jpa.properties.hibernate.format_sql=true
+# 기본 SQL 로그 보기
+spring.jpa.show-sql=true
