--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=Cafe
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/webdb
+spring.datasource.username=webuser
+spring.datasource.password=webuser
+
+#log4j2 ?? ?? ???
+logging.level.springframework=info
+logging.level.com.busanit501=debug
+
+#spring jpa ?? ??.
+spring.jpa.hibernate.ddl-auto=update
+# ?? ?? sql ??? ?? ??. ??? ??
+spring.jpa.properties.hibernate.format_sql=true
+# ?? ?? sql ??? ??
+spring.jpa.show-sql=true
+
+#?? ??? ?? ??.
+# ???? ???? ??, ???, ????, ????, static ??? ??? ??
+spring.servlet.multipart.enabled=true
+# ?????, ???? ???? ??
+spring.servlet.multipart.location=c:\\upload\\springTest
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=100MB
+
+#???? , ?? ???? ?? ???, ??????, ? ???? ?????.
+com.busanit501.upload.path=c:\\upload\\springTest
