--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Cafe
 
+# 시작 주소 경로
+server.servlet.context-path=/cafe
+
 # ??? ?? ?? ??
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/webdb
