--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=Cafe
+spring.application.name=cafe
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/webdb
+spring.datasource.username=webuser
+spring.datasource.password=webuser
+
+logging.level.springframework=info
+logging.level.com.busanit501=debug
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.show-sql=true
+
+spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.location=c:\\upload\\springTest
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=100MB
