--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    //테스트 환경에서, 롬복 이용하기.
+    // 테스트 환경에서, 롬복 이용하기.
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 
@@ -51,46 +51,34 @@ dependencies {
     implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.1.0'
 
     // https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa
-    // 방법1
-//    implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '5.0.0'
-
-
-    //Querydsl 도구 설치.
-    // 방법2,
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
 
     // 모델 맵퍼 도구 설치.
     // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'
 
-// 서버에서 유효성 체크 도구
+    // 서버에서 유효성 체크 도구
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.3.0'
 
-// Swagger UI, RESTful 테스트를 위한 화면 제공 툴.
+    // Swagger UI, RESTful 테스트를 위한 화면 제공 툴.
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
 
     // https://mvnrepository.com/artifact/net.coobird/thumbnailator
     // 썸네일 도구
     implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20'
 
+    implementation 'org.springframework:spring-core:6.1.8'
+    implementation 'cglib:cglib:3.3.0'
 
     annotationProcessor(
             "jakarta.persistence:jakarta.persistence-api",
             "jakarta.annotation:jakarta.annotation-api",
             "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
-
-
-}
-
-//작업중
-tasks.named('test') {
-    useJUnitPlatform()
 }
 
 // 프로젝트 빌드 폴더에 소스 파일등을 자동으로 변경하는 코드.
 sourceSets {
-
     main {
         java {
             srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
@@ -98,5 +86,8 @@ sourceSets {
     }
 }
 
-
 compileJava.dependsOn('clean')
+
+tasks.named('test') {
+    useJUnitPlatform()
+}
